--- a/app/src/main/res/layout/activity_admin_add_new_product.xml
+++ b/app/src/main/res/layout/activity_admin_add_new_product.xml
@@ -4,14 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminAddNewProductActivity">
+    tools:context=".AdminAddNewProductActivity"
+    >
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/select_product_image"
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:cropToPadding="false"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/select_product_image"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
@@ -80,6 +88,6 @@
 
         ></Button>
 
-
-
+</LinearLayout>
+    </ScrollView>
 </RelativeLayout>
