--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -20,6 +20,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@drawable/profile"
+        android:layout_gravity="center"
         app:civ_border_width="2dp"
         app:civ_border_color="@android:color/white"/>
 
@@ -30,6 +31,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textSize="20sp"
         android:layout_marginLeft="4dp"
+        android:gravity="center"
         android:textStyle="bold"
         android:text="user name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
